--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@
             id="site-logo"
             src="logo.png"
             alt="Xylo logo"
-            data-light="logo.jpg"
+            data-light="logo.png"
             data-dark="logo.png"
           />
           <h1 class="brand-title">Xylo Hub</h1>
@@ -227,3 +227,4 @@
     </script>
   </body>
 </html>
+
